# diffusion-models

./: .gitignore  README.md  colors.py  digest.txt  matplotlibrc  pyproject.toml
checkpoints/: ddpm_epoch_0.pth
runs/ddpm_mnist/train/: events.out.tfevents.1770713228.Taariqs-MacBook-Pro.local.7338.0
runs/ddpm_mnist/val/: events.out.tfevents.1770713228.Taariqs-MacBook-Pro.local.7338.1
runs/ddpm_mnist_v2/: events.out.tfevents.1770712808.Taariqs-MacBook-Pro.local.6036.0  events.out.tfevents.1770712888.Taariqs-MacBook-Pro.local.6215.0
solution_1/: plot_loss.py  solution.typ
solution_2/: solution.typ
src/: data.py
src/assignment1/: README.md  ddpm_mnist_final.pth  ema.py  helpers.py  model.py  sample.py  scores.py  train.py
src/assignment1/classifier/: helper.py  model.py  train.py
src/assignment2/: README.md  guidance_sweep.py  memorization.py  model.py  pixel_pr.py  sample.py
src/ddpm/: main.py  model.py
src/diffusion_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
